tasks 2 and 3